2000-08-20  arik devens  <arik@helixcode.com>

	* Makefile.am (evolution_LDADD): Added UNICODE_LIBS to link in the
	new e-text stuff.

2000-08-19  Christopher James Lahey  <clahey@helixcode.com>

	* e-shell-folder-title-bar.c: Fixed a warning.

2000-08-19  Christopher James Lahey  <clahey@helixcode.com>

	* e-shell-view.c: Fixed a warning.

2000-08-18  Larry Ewing  <lewing@helixcode.com>

	* e-shell-folder-title-bar.c (style_set_cb): update the pixmap
	define E_USE_STYLES to disable the current darkening behavior
	(destroy): free the icon.
	(e_shell_folder_title_bar_construct): style_set_cb does everything
	important now.
	(e_shell_folder_title_bar_set_icon): actually store the pixbuf
	when we set it so that we still have it if the style changes and
	take care of refcounting them properly.

2000-08-17  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-view-menu.c (menu_create_file): Make capitalization of
	menu items consistent.
	(menu_create_view): Likewise.
	(menu_create_help): Likewise.
	(e_shell_view_menu_setup): Create a component menu placeholder so
	that components can add their own component-specific menus there.
	(menu_create_actions): Removed.
	(e_shell_view_menu_setup): Don't call it.
	(menu_create_tools): Removed.
	(e_shell_view_menu_setup): Don't call it.
	(menu_create_settings): New.
	(e_shell_view_menu_setup): Call it.

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-view.c (delete_event): New.  Make the parent shell quit.

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-view.c (shell_view_interface_set_message_cb): Removed
	debugging message.
	(shell_view_interface_unset_message_cb): Likewise.

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell-view.c: New members `progress_bar_timeout_id',
	`progress_bar_value' in `EShellViewPrivate'.
	(init): Init them.
	(destroy): If the timeout id is not zero, remove the associated
	timeout.
	(progress_bar_timeout_cb): New.
	(start_progress_bar): New.