@@ -1,3 +1,9 @@
+2000-08-24  Ettore Perazzoli  <ettore@helixcode.com>
+
+	* evolution-shell-component-client.c
+	(evolution_shell_component_client_new): Don't abort if the
+	component cannot be activated.  Rather, just return NULL.
+
 2000-08-20  arik devens  <arik@helixcode.com>
 
 	* Makefile.am (evolution_LDADD): Added UNICODE_LIBS to link in the
